[package]
name = "data-rw"
version = "1.0.2"
authors = ["luyi <luyikk@126.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/buffer"
documentation = "https://docs.rs/buffer"
description = "io buffer write reader."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes="0.6"
paste="1.0.2"
serde = "1.0"
rmp-serde = "0.15.4"
anyhow="1.0"
[dev-dependencies]
serde={version = "1.0", features = ["derive"] }
serde_bytes="0.11.5"