[package]
name = "data-rw"
version = "1.3.0"
authors = ["luyi <luyikk@126.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/buffer"
documentation = "https://docs.rs/buffer"
description = "io buffer write reader."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=["json"]
rmp=["rmp-serde"]
json=["serde_json"]

[dependencies]
bytes="0.6"
paste="1.0.2"
serde = "1.0"
anyhow="1.0"
rmp-serde = { version="0.15.4",optional=true}
serde_json={ version="1.0",optional=true}

[dev-dependencies]
serde={version = "1.0", features = ["derive"] }
serde_bytes="0.11.5"
