[package]
name = "data-rw"
version = "1.5.6"
authors = ["luyi <luyikk@126.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/buffer"
documentation = "https://docs.rs/data-rw"
description = "io buffer write reader."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=["rmp"]
big_endian=[]
check_utf8=[]
rmp=["rmp-serde"]
json=["serde_json"]


[dependencies]
anyhow = "1.0"
serde = "1.0"
paste="1.0"
auto_impl = "0.4"
rmp-serde = { version="0.15",optional=true}
serde_json={ version="1.0",optional=true}
cfg-if = "1.0"

[dev-dependencies]
serde={version = "1.0", features = ["derive"] }
rmp-serde = { version="0.15"}
serde_json={ version="1.0"}
bincode = "1.3.3"